Add undo support for association widgets

It was necessary to enlarge CmdBaseWidgetCommand and derived classes
with an additional AssociationWidget pointer, since the WidgetBase class
misses some methods to be usable as a common class for all widget types
and association widgets are implemented differently in the UMLscene class.

BUG:363008
FIXED-IN:2.28.80 (KDE Applications 19.07.80)